--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,55 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* end reset styling */
+
+
 body {
     background-image: url("../images/memphis-mini-dark.png");
     /*=========================================================================
@@ -8,9 +60,31 @@ body {
     background-attachment: fixed;
 }
 
+.footwrapper {
+    min-height: 100%;
+    max-width: 960px;
+}
+
+.wrapper {
+    min-height: 100%;
+    max-width: 960px;
+    margin-bottom: -50px;
+}
+
+.main {
+    max-width: 700px;
+    background-color: #ffffff;
+}
+
 footer {
-    background-color: ;
+    background-color: #666666 ;
     border-top: 8px solid #4aaaa5;
+    max-width: 960px;
+    margin-top: 50px;
+    height: 58px;
+    text-align: center;
+    padding-top: 16px;
+    box-sizing: border-box ;
 }
 
 h1, h2, h3, h4 {
