--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,18 @@ body {
 }
 
 
+.footwrapper {
+    min-height: 100%;
+    max-width: 960px;
+}
+
+.wrapper {
+    min-height: 100%;
+    max-width: 960px;
+    margin-bottom: 50px;
+}
+
+
 .header {
     background-color: #ffffff;
     width:100%;
@@ -93,20 +105,31 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 /*
+
 .navtab2 {
-    float:right;
-    background-color: #ffffff
-    height: 10px;
-    width: 80px;
-    box-sizing: border-box;
+    go to link?
 }
+
+.navtab2 {
+     go to link?
+}
+
 .navtab3 {
-    float:right;
-    background-color: #ffffff
-    height: 10px;
-    width: 80px;
-    box-sizing: border-box;
+     go to link?
 }*/
+
+a {
+    text-decoration:none;
+}
+
+a:link, a:visited {
+    color: black;
+  }
+
+
+a:hover {
+    color: #4aaaa5;
+}
 
 .topic {
     background-color: #ffffff;
@@ -114,15 +137,16 @@ body {
     color: #4aaaa5;
 }
 
-.footwrapper {
-    min-height: 100%;
-    max-width: 960px;
+.content {
+    float:left;
 }
 
-.wrapper {
-    min-height: 100%;
-    max-width: 960px;
-    margin-bottom: 50px;
+.imagebox {
+    border-width: 1px;
+    border-color: #4aaaa5;
+    width: 160px;
+    height: 195px;
+    float:left;
 }
 
 .main {
@@ -161,5 +185,5 @@ h1, h2, h3, h4 {
 
 p {
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-
+    line-height: 130%;
 }
