--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,3 +187,29 @@ p {
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 130%;
 }
+
+.container {
+    max-width: 960px;
+}
+
+.form-area {
+    height: auto;
+}
+
+.image1  {
+    position: relative;
+    padding: 10px;
+    padding-left: 30px;
+    float: left;
+  }
+  
+  .projectname {
+    position: absolute;
+    text-align: center;
+    color: #ffffff;
+    background-color: #4aaaa5;
+    padding:10px;
+    bottom: 20px;
+    width: 230px;
+    height: 20px;
+  } 
